<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".app.creature.creature_sheet.CreatureEnvironmentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPaper"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:layout_gravity="top"
            android:padding="5dp"
            android:contentDescription="TODO"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_baseline_terrain_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Environment"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/creature_sheet_checkbox_arctic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:text="@string/creature_environment_arctic" />
                    <CheckBox
                        android:id="@+id/creature_sheet_checkbox_forest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:text="@string/creature_environment_forest" />
                    <CheckBox
                        android:id="@+id/creature_sheet_checkbox_mountain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:text="@string/creature_environment_mountain" />
                    <CheckBox
                        android:id="@+id/creature_sheet_checkbox_underwater"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:text="@string/creature_environment_underwater" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/creature_sheet_checkbox_coastal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:text="@string/creature_environment_coastal" />
                    <CheckBox
                        android:id="@+id/creature_sheet_checkbox_grassland"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:text="@string/creature_environment_grassland" />
                    <CheckBox
                        android:id="@+id/creature_sheet_checkbox_swamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:text="@string/creature_environment_swamp" />
                    <CheckBox
                        android:id="@+id/creature_sheet_checkbox_urban"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:text="@string/creature_environment_urban" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/creature_sheet_checkbox_desert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:text="@string/creature_environment_desert" />
                    <CheckBox
                        android:id="@+id/creature_sheet_checkbox_hill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:text="@string/creature_environment_hill" />
                    <CheckBox
                        android:id="@+id/creature_sheet_checkbox_underdark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:text="@string/creature_environment_underdark" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>